# detr-mmap

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  compose.yaml  device-plugin-daemonset.yaml  docker-bake.hcl  index.html  justfile  k3d-config.yaml  kind-config.yaml  refactoring.md  test_strategy.md
.github/workflows/: build.yaml  ci.yaml  tests.yaml
crates/bridge/: Cargo.toml
crates/bridge/benches/: detection_throughput.rs  frame_throughput.rs  mmap_throughput.rs
crates/bridge/src/: detection_reader.rs  detection_writer.rs  errors.rs  frame_reader.rs  frame_writer.rs  header.rs  lib.rs  macros.rs  mmap_reader.rs  mmap_writer.rs  paths.rs  retry.rs  semaphore.rs  sentry_control.rs  trace_context.rs  types.rs  utils.rs
crates/bridge/tests/: detection_integration_test.rs  frame_integration_test.rs  integration_test.rs
crates/calibration/: Cargo.toml
crates/calibration/src/: main.rs
crates/capture/: Cargo.toml
crates/capture/benches/: mjpeg_decoding.rs
crates/capture/src/: camera.rs  config.rs  decoder.rs  device.rs  lib.rs  main.rs  pacing.rs  serialization.rs  sink.rs  source.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  logging.rs  retry.rs  telemetry.rs  wait.rs
crates/controller/: Cargo.toml
crates/controller/src/: config.rs  detection_reader.rs  main.rs  mqtt_notifier.rs  service.rs  state_machine.rs
crates/gateway/: Cargo.toml
crates/gateway/benches/: jpeg_encoding.rs
crates/gateway/src/: camera.rs  config.rs  cv_utils.rs  lib.rs  logging.rs  main.rs  polling.rs  serialization.rs  state.rs  ws.rs
crates/inference/: Cargo.toml  bench_compare.sh  build.rs
crates/inference-cpp/: .clang-format  CMakeLists.txt  README.md
crates/inference-cpp/include/: detection_writer.hpp  frame_reader.hpp  logging.hpp  postprocessing.hpp  preprocessing.hpp  rfdetr_backend.hpp  semaphore.hpp  tensorrt_backend.hpp
crates/inference-cpp/src/: detection_writer.cpp  frame_reader.cpp  logging.cpp  main.cpp  postprocessing.cpp  preprocessing.cpp  rfdetr_backend.cpp  semaphore.cpp  tensorrt_backend.cpp
crates/inference/benches/: inference_pipeline.rs
crates/inference/src/: config.rs  lib.rs  logging.rs  main.rs  postprocessing.rs  preprocessing.rs  serialization.rs  service.rs
crates/inference/src/backend/: mod.rs  ort.rs  trt.rs
crates/inference/src/processing/: mod.rs  post.rs  pre.rs
crates/logic/: Cargo.toml
crates/logic/src/: config.rs  lib.rs  logging.rs  main.rs  polling.rs  ws.rs
crates/preprocess/: Cargo.toml  build.rs
crates/preprocess/benches/: preprocess.rs
crates/preprocess/cuda/: preprocess.cu
crates/preprocess/src/: config.rs  cpu.rs  gpu.rs  lib.rs  preprocess.rs
crates/schema/: Cargo.toml  build.rs  detection.fbs  frame.fbs  trace_context.fbs  trace_metadata.fbs
crates/schema/src/: detection_generated.rs  frame_generated.rs  lib.rs
crates/tracing-macros/: Cargo.toml
crates/tracing-macros/src/: lib.rs
docker/: Dockerfile  benchmark-gpu.Dockerfile  benchmark.Dockerfile  compose.benchmark.yml  compose.local.yml  gateway.Dockerfile  gateway.distroless.Dockerfile  gpu-base.Dockerfile  gpu-benchmark.Dockerfile  gpu-inference.Dockerfile  inference-cpu.Dockerfile  inference-gpu.Dockerfile  inference-ort-cuda.Dockerfile  inference-trt.Dockerfile  inference.Dockerfile  k3s-gpu.Dockerfile  logic.Dockerfile
docs/: data_flow.md  k3d_cuda.md
k8s/base/: capture-deployment.yaml  controller-deployment.yaml  deployment.yaml  gateway-deployment.yaml  gateway-service.yaml  inference-deployment.yaml  kustomization.yaml  mosquitto-configmap.yaml  mosquitto-service.yaml  mosquitto-statefulset.yaml  namespace.yaml
k8s/components/gpu/: inference-patch.yaml  kustomization.yaml
k8s/components/inference-cpu/: kustomization.yaml
k8s/components/inference-ort-cuda/: inference-patch.yaml  kustomization.yaml
k8s/components/inference-trt/: inference-patch.yaml  kustomization.yaml
k8s/components/jaeger/: deployment.yaml  service.yaml
k8s/components/k3d-dev/: capture-patch.yaml  gateway-patch.yaml  inference-patch.yaml  kustomization.yaml
k8s/components/otel-collector/: capture-otel-patch.yaml  collector-configmap.yaml  collector-deployment.yaml  collector-service.yaml  controller-otel-patch.yaml  gateway-otel-patch.yaml  inference-otel-patch.yaml  kustomization.yaml
k8s/overlays/k3d/: controller-patch.yaml  deployment-patch.yaml  inference-patch.yaml  kustomization.yaml
k8s/overlays/k3d-cpu/: kustomization.yaml
k8s/overlays/k3d-gpu/: kustomization.yaml
k8s/overlays/k3s/: capture-patch.yaml  deployment-patch.yaml  gateway-patch.yaml  inference-patch.yaml  kustomization.yaml
k8s/overlays/kind/: deployment-patch.yaml  kustomization.yaml
scripts/: build-images.sh  build-k3d-gpu-image.sh  build-k3s-gpu-image.sh  deploy-k3d.sh  deploy-k3s.sh  deploy-kind.sh  setup-k3d.sh  setup-kind.sh
scripts/model-pipeline/: README.md  build_calibration_cache.py  coco_image_ids.txt  download_calibration_data.py  export_onnx.py  main.py  prepare_and_publish.py  pyproject.toml  user_build_engine.py
scripts/model-setup/: build.py  download.py  pyproject.toml
scripts/quantization/: build_int8_engine.py  download_mini_coco.py  pyproject.toml
