[workspace]
resolver = "3"
members = ["crates/bridge","crates/common","crates/capture","crates/inference", "crates/gateway", "crates/schema", "crates/controller"]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
tracing-opentelemetry = "0.32"
tracing = { version = "0.1", features = ["release_max_level_info"] }
