[workspace]
resolver = "3"
members = [
  "crates/bridge",
  "crates/calibration",
  "crates/common",
  "crates/controller",
  "crates/capture",
  "crates/gateway",
  "crates/inference",
  "crates/preprocess",
  "crates/schema",
]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
tracing-opentelemetry = "0.32"
tracing = { version = "0.1", features = ["release_max_level_info"] }

[profile.release]
lto = "fat"
codegen-units = 1
# panic = "abort"
# strip = "symbols"

# [profile.release.build-override]
# opt-level = 3
