[package]
name = "bridge"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
flatbuffers = "24.3"
libc = "0.2"
memmap2 = "0.9"
nix = { version = "0.30.1", features = ["mqueue", "time"] }
schema = { path = "../schema" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.24"
criterion = { workspace = true }

[[bench]]
name = "frame_throughput"
harness = false

[[bench]]
name = "detection_throughput"
harness = false
