[package]
name = "bridge"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []

frame-reader = ["mmap-reader"]
frame-writer = ["mmap-writer"]
detection-reader = ["mmap-reader"]
detection-writer = ["mmap-writer"]
sentry = []
semaphores = []
tokio = ["dep:tokio"]
tracing = ["dep:tracing", "dep:tracing-opentelemetry", "dep:opentelemetry"]

mmap-reader = []
mmap-writer = []

# All features for CI testing
ci = ["frame-reader", "frame-writer", "detection-reader", "detection-writer", "sentry", "semaphores", "tokio"]

[dependencies]
common = { path = "../common" }
anyhow = "1"
flatbuffers = "24.3"
libc = "0.2"
memmap2 = "0.9"
nix = { version = "0.30.1", features = ["mqueue", "time"] }
schema = { path = "../schema" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["time"], optional = true }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.24"
criterion = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "frame_throughput"
harness = false
required-features = ["frame-reader", "frame-writer"]

[[bench]]
name = "detection_throughput"
harness = false
required-features = ["detection-reader", "detection-writer"]

[[test]]
name = "frame_integration_test"
required-features = ["frame-reader", "frame-writer"]

[[test]]
name = "detection_integration_test"
required-features = ["detection-reader", "detection-writer"]
