[package]
name = "calibration"
version.workspace = true
edition.workspace = true

[[bin]]
name = "calibration"
path = "src/main.rs"

[dependencies]
preprocess = { path = "../preprocess" }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
flatbuffers = "24.3"
ndarray = "0.17"
anyhow = "1"
bytemuck = "1.24"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
