[package]
name = "capture"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "capture"

[dependencies]
v4l = "0.14.0"
nokhwa = { version = "0.10", features = ["input-native"] }
thiserror = "2.0.17"
schema = { path = "../schema" }
bridge = { path = "../bridge" }
common = { path = "../common" }
flatbuffers = "24.3"
anyhow = "1.0"
tracing = { version = "0.1.44", default-features = false }
signal-hook = "0.3"
