[package]
name = "capture"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "capture"

[dependencies]
v4l = "0.14.0"
libc = "0.2"
turbojpeg = "1.3"
thiserror = "2.0.17"
schema = { path = "../schema" }
bridge = { path = "../bridge", features = ["frame-writer", "sentry", "semaphores", "tracing"] }
common = { path = "../common" }
anyhow = "1"
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
signal-hook = "0.3"

[dev-dependencies]
criterion = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[[bench]]
name = "mjpeg_decoding"
harness = false
