[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
async = ["tokio"]

[dependencies]
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["time"], optional = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = { workspace = true }
anyhow = "1"
