[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
schema = { path = "../schema" }
bridge = { path = "../bridge", features = ["detection-reader", "sentry", "semaphores"] }
common = { path = "../common" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
