[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
schema = { path = "../schema" }
bridge = { path = "../bridge", features = ["frame-reader", "detection-reader", "semaphores", "tokio"] }
common = { path = "../common", features = ["async"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tracing = { version = "0.1.44", default-features = false }

[dev-dependencies]
criterion = "0.5"
bridge = { path = "../bridge" }

[[bench]]
name = "jpeg_encoding"
harness = false
