[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
schema = { path = "../schema" }
bridge = { path = "../bridge", features = ["frame-reader", "detection-reader", "semaphores", "tokio", "tracing"] }
common = { path = "../common", features = ["async"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
turbojpeg = "1.3"
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }

[dev-dependencies]
criterion = "0.5"
bridge = { path = "../bridge" }

[[bench]]
name = "jpeg_encoding"
harness = false
