[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
schema = { path = "../schema" }
bridge = { path = "../bridge", features = ["frame-reader", "detection-writer", "semaphores"] }
common = { path = "../common" }
ort = { version = "2.0.0-rc.11", features = ["cuda"], optional = true }
flatbuffers = "24.3"
memmap2 = "0.9"
anyhow = "1.0"
ndarray = "0.17"
image = "0.25"
fast_image_resize = "5.0"
tracing = { version = "0.1.44", default-features = false }
cxx = "1.0"

[features]
default = ["ort-backend"]
# ONNX Runtime backend for RF-DETR
ort-backend = ["dep:ort"]
# TensorRT backend for RF-DETR (512x512, raw outputs)
trt-backend = []

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
criterion = { workspace = true }
flatbuffers = "24.3"

[[bench]]
name = "inference_pipeline"
harness = false
