[package]
name = "inference"
version.workspace = true
edition.workspace = true

[dependencies]
schema = { path = "../schema" }
bridge = { path = "../bridge", features = ["frame-reader", "detection-writer", "semaphores", "tracing"] }
common = { path = "../common" }
preprocess = { path = "../preprocess" }
ort = { version = "2.0.0-rc.11", features = ["cuda"], optional = true }
flatbuffers = "24.3"
memmap2 = "0.9"
anyhow = "1"
ndarray = "0.17"
image = { version = "0.25", default-features = false }
fast_image_resize = { version = "5.0", features = ["rayon"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
cxx = "1.0"

[features]
default = ["ort-backend"]
ort-backend = ["dep:ort"]
trt-backend = []
# GPU preprocessing using cudarc
gpu-preprocess = ["preprocess/cuda"]
# All features safe for CI (excludes trt-backend which requires TensorRT)
ci = ["ort-backend"]

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
criterion = { workspace = true }
flatbuffers = "24.3"

[[bench]]
name = "inference_pipeline"
harness = false
