[package]
name = "logic"
version = "0.1.0"
edition = "2024"

[dependencies]
schema = { path = "../schema" }
bridge = { path = "../bridge" }
common = { path = "../common" }
flatbuffers = "24.3"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
image = "0.25"
tracing = { version = "0.1.44", default-features = false }
