[project]
name = "detr-model-pipeline"
version = "0.1.0"
description = "INT8 Model Preparation Pipeline for RF-DETR"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.20.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
tensorrt = [
    "tensorrt>=10.0.0",
    "pycuda>=2024.1",
]

[project.scripts]
export-onnx = "export_onnx:main"
download-calibration-data = "download_calibration_data:main"
build-calibration-cache = "build_calibration_cache:main"
prepare-and-publish = "prepare_and_publish:main"
user-build-engine = "user_build_engine:main"
