[project]
name = "detr-model-pipeline"
version = "0.1.0"
description = "INT8 Model Preparation Pipeline for RF-DETR"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.20.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "tqdm>=4.67.1",
    "aiohttp>=3.13.3",
]

[project.optional-dependencies]
tensorrt = [
    "tensorrt>=10.0.0",
    "pycuda>=2024.1",
]
