[project]
name = "detr-model-setup"
version = "0.1.0"
description = "Download ONNX and build TensorRT INT8 engine from HuggingFace"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
tensorrt = [
    "numpy>=1.24.0",
    "tensorrt>=10.0.0",
    "pycuda>=2024.1",
]
